# InsAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  TODO.txt  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: PHASE3_TESTING.md  PHASE4_TESTING.md  PHASE5_TESTING.md
specs/master/: LANGCHAIN_INTEGRATION.md  REVISIONS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/master/contracts/: llm-signals.schema.json
src/coinkarma/: dateutil.py  descrypt.py
src/solana_trader/: __init__.py  config.py
src/solana_trader/coinkarma/: __init__.py  karmafetch.py
src/solana_trader/langchain_tools/: __init__.py  execute_trade.py  market_data.py  wallet_info.py
src/solana_trader/models/: __init__.py  market_data.py  trade_execution.py  trading_signal.py
src/solana_trader/scripts/: llm_trade.py  manual_trade.py
src/solana_trader/services/: data_collector.py  llm_analyzer.py  storage.py  trade_executor.py
src/solana_trader/utils/: logger.py  retry.py
src/solana_trader/wallet/: manager.py
