[project]
name = "solana-trader"
version = "0.1.0"
description = "AI-powered Solana trading bot using LangChain v1.0+ and OpenRouter"
authors = [
    {name = "InsAI Team", email = "team@insai.example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["solana", "trading", "ai", "langchain", "llm", "cryptocurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # LLM & Agent Framework
    "langchain>=1.0.3",
    "openai>=1.0.0",  # OpenRouter SDK (OpenAI-compatible)

    # Solana Blockchain
    "solana>=0.35.0",
    "solders>=0.21.0",

    # Data Validation & Config
    "pydantic>=2.10.4",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # HTTP & Async
    "aiohttp>=3.9.0",
    "requests>=2.31.0",

    # Logging & Utils
    "structlog>=24.0.0",

    # Cryptography (for CoinKarma)
    "cryptography>=44.0.0",
    "pycryptodome>=3.20.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Code Quality
    "ruff>=0.1.0",
    "black>=24.0.0",
    "mypy>=1.8.0",

    # Type Stubs
    "types-requests>=2.31.0",
]

[project.scripts]
solana-trader = "solana_trader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=solana_trader",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "solana.*",
    "solders.*",
    "langchain.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["solana_trader"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
